[project]
name = "promipool-updates"
version = "1.0.0"
description = "Traffective AI Tools - Streamlit-basierte Webanwendung zur automatisierten SEO-Artikel-Generierung im Bereich Programmatic Advertising und Entertainment-Content (Promipool)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Traffective AI Team"}
]

dependencies = [
    "anthropic==0.49.0",
    "beautifulsoup4==4.13.3",
    "fake-useragent==1.5.1",
    "feedparser==6.0.10",
    "filetype==1.2.0",
    "googlenewsdecoder==0.1.6",
    "gspread==6.2.0",
    "newspaper3k==0.2.8",
    "oauth2client==4.1.3",
    "openai>=2.6.0",
    "pandas==2.2.3",
    "PyPDF2==3.0.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "streamlit==1.35",
    "lxml[html_clean]",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages", "material"]
py-modules = ["promipool"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
